@@ -1,5 +1,13 @@
 2007-04-25  Edward Hervey  <edward@fluendo.com>
 
+	Patch by: Thibaut Girka <thibaut.girka@free.fr>
+	* pitivi/ui/mainwindow.py:
+	Fix i18n bug.
+	Disable/enable [Render] button at correct time.
+	Fixes #432204
+
+2007-04-25  Edward Hervey  <edward@fluendo.com>
+
 	Patch by: Jeff Fortin <nekohayo@gmail.com>
 	* pitivi/ui/mainwindow.py:
 	Make fullscreen action toggle-able (like other gtk/gnome apps).
